# BalaRL

./: .gitattributes  .gitignore  README.md  pyproject.toml
scripts/: run_train.sh  setup_server.sh  sync_results.sh
src/balarl/: __init__.py
src/balarl/agents/: __init__.py  expert.py
src/balarl/engine/: __init__.py  blinds.py  boss_blinds.py  cards.py  consumables.py  game_state.py  hand_eval.py  joker_effects.py  jokers.py  scoring.py  shop.py
src/balarl/env/: __init__.py  action_space.py  balatro_env.py  observation.py  reward.py
src/balarl/scripts/: generate_trajectories.py  train.py
src/balarl/training/: bc_pretrain.py  callbacks.py  config.py  curriculum.py  feature_extractor.py  ppo_train.py
tests/test_engine/: test_smoke.py
