[project]
name = "balarl"
version = "0.1.0"
description = "Reinforcement Learning for Balatro - a poker roguelike deckbuilder"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.0.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
training = [
    "torch>=2.2",
    "stable-baselines3>=2.3",
    "tensorboard>=2.14",
    "wandb>=0.16",
    "optuna>=3.5",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.3"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
